<resources>
    <string name="app_name">RoadFit</string>

    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="forgotPassword">¿Olvidaste tu contraseña?</string>
    <string name="login">Iniciar sesión</string>
    <string name="google">Acceder con Google</string>
    <string name="facebook">Acceder con Facebook</string>
    <string name="resetPassword">Enviar contraseña</string>
    <string name="invitation">Sigue tu ruta</string>
    <string name="acept">He leído y acepto los </string>
    <string name="terms">Términos y condiciones de uso </string>
    <string name="empty_email">Ingresa tu email</string>
    <string name="invalid_email">Correo invalido</string>
    <string name="bar_title_terms">Términos y Condiciones de Uso</string>

    <string name="bar_title">RoadFit</string>
    <string name="menu_running">Running</string>
    <string name="menu_record">Historial</string>
    <string name="menu_becamepremium">Hazte premium</string>
    <string name="menu_clearpreferences">Reestablecer ajustes</string>
    <string name="ic_menu_gallery">Cerrar Sesión</string>
    <string name="menu_signout">Running</string>
    <string name="tvGoogle">Google</string>

    <string name="accept">Aceptar</string>

    <string name="user">moises@gmail.com</string>
    <string name="navigation_drawer_open">Menú</string>
    <string name="navigation_drawer_close">Cerrar Menú</string>
    <string name="googleWebClientId">moises.segura94@gmail.com</string>


    <string name="terms1">Primeros terminos y condiciones Primeros terminos y condiciones Primeros terminos y condiciones Primeros terminos y condiciones Primeros terminos y condiciones Primeros terminos y condiciones Primeros terminos y condiciones Primeros terminos y condiciones</string>
    <string name="terms2">Aqui van los segundos terminos y condiciones Aqui van los segundos terminos y condiciones Aqui van los segundos terminos y condiciones Aqui van los segundos terminos y condiciones Aqui van los segundos terminos y condiciones Aqui van los segundos terminos y condiciones </string>
    <string name="terms3">Ultimos terminos y condiciones van aqui Ultimos terminos y condiciones van aqui Ultimos terminos y condiciones van aqui Ultimos terminos y condiciones van aqui Ultimos terminos y condiciones van aqui Ultimos terminos y condiciones van aqui Ultimos terminos y condiciones van aqui </string>



    <string name="bar_title_record">Historial</string>




     <string name="orderby_dateZA">Fecha (Recientes primero)</string>
    <string name="orderby_durationZA">Duración (Mayores primero)</string>
    <string name="orderby_distanceZA">Distancia (Mayores primero)</string>
    <string name="orderby_avgspeedZA">Vel. Prom. (Mayores primero)</string>
    <string name="orderby_maxspeedZA">Vel. Máx. (Mayores primero)</string>

    <string name="orderby_dateAZ">Fecha (Antiguos primero)</string>
    <string name="orderby_durationAZ">Duración (Menores primero)</string>
    <string name="orderby_distanceAZ">Distancia (Menores primero)</string>
    <string name="orderby_avgspeedAZ">Vel. Prom. (Menores primero)</string>
    <string name="orderby_maxspeedAZ">Vel. Máx. (Menores primero)</string>


    <string name="start">Iniciar</string>
    <string name="stop">Pausa</string>
    <string name="finish">Finalizar</string>
    <string name="rounds">Round 1</string>
    <string name="time_running">Running Time</string>
    <string name="time_walking">Walking Time</string>
    <string name="walking_clock">00:00</string>
    <string name="init_stop_watch_value">00:00:00</string>

    <string name="hard_volumen">Volumen de Música Cañera</string>
    <string name="soft_volumen">Volumen de Música Tranqui</string>
    <string name="notification_volumen">Volumen de Notificaciones</string>
    <string name="hard_position">00:00:00</string>
    <string name="hard_duration">01:00:00</string>
    <string name="soft_position">00:00:00</string>
    <string name="soft_duration">01:00:00</string>

    <string name="PopUpTotalRuns">Carrera: </string>
    <string name="PopUpTotalDistance">Kms acumulados: </string>
    <string name="PopUpTotalTime">Total time: </string>
    <string name="NoDataWarning">No hay datos registrados. Recuerda activar el GPS si deseas información de tu carrera</string>

    <string name="PopUpDurationTitle">DURACION</string>
    <string name="PopUpChallengeTitle">OBJETIVO</string>
    <string name="PopUpIntervalTitle">INTERVALOS</string>
    <string name="PopUpDistanceTitle">DISTANCIA</string>
    <string name="PopUpAvgSpeedTitle">VELOCIDAD PROMEDIO</string>
    <string name="PopUpMaxSpeedTitle">VELOCIDAD MÁXIMA</string>
    <string name="PopUpUnevennessTitle">DESNIVEL</string>




    <string name="textNull"></string>
    <string name="textNoData">-</string>

    <string name="medalDistanceDescription">Distancia [Record Personal]</string>
    <string name="medalAvgSpeedDescription">Vel. Máx. [Record Personal]</string>
    <string name="medalMaxSpeedDescription">Vel. Prom. [Record Personal]</string>

</resources>